# ixcoin

./: .env.example  .gitignore  AI_LAYER.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.ai-layer  INSTALL.md  IXCOIN_README.md  Makefile.am  README.md  TOKENOMICS.md  UPGRADE_README.md  Whitepaper ixcoin  Whitepaper.md  configure.ac  deploy.sh  docker-compose.yml  libixcoinconsensus.pc.in  railway.json  tokenomics.json
ai-layer/: .env.example  AI_UPGRADE.md  DEPLOY.md  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
ai-layer/src/: app.ts  index.ts
build-aux/m4/: ixc_find_bdb53.m4  ixc_subdir_to_include.m4
cmake/modules/: BrewHelper.cmake
depends/: description.md
deploy/: deploy.sh  install_vps.sh  ixcoin-api.service  ixcoin.conf  ixcoin.conf.example  nginx.conf  setup-vps.sh  start_mining.sh
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-unix.md  developer-notes.md  files.md  init.md  reduce-traffic.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.1.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.2.0.md  release-notes.md  shared-libraries.md  txid.md  zmq.md
doc/man/: Makefile.am  ixcoin-cli.1  ixcoin-tx.1  ixcoind.1
genesis/: allocation.json
share/: genbuild.sh  on_prod_tag.sh  setup.nsi.in
share/rpcuser/: rpcuser.py
src/: CMakeLists.txt  Makefile.am  Makefile.leveldb.include  abort_node.cpp  abort_node.h  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  async_file_reader.h  base58.cpp  base58.h  big_int.cpp  big_int.h  block_file_access.cpp  block_file_access.h  block_file_info.cpp  block_file_info.h  block_hasher.h  block_index.cpp  block_index.h  block_index_store.h  block_index_store_loader.cpp  block_index_store_loader.h  blockencodings.cpp  blockencodings.h  blockfileinfostore.cpp  blockfileinfostore.h  blockindex_with_descendants.h  blockstreams.h  blockvalidation.h  bloom.cpp  bloom.h  cfile_util.cpp  cfile_util.h  chain.cpp  chain.h  (+156 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: CMakeLists.txt  ixc-config.h.cmake.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/double_spend/: dsattempt_handler.cpp  dsattempt_handler.h  dscallback_msg.cpp  dscallback_msg.h  dsdetected_defaults.h  dsdetected_message.cpp  dsdetected_message.h  dstxn_serialiser.cpp  dstxn_serialiser.h  time_limited_blacklist.h
src/invalid_txn_sinks/: file_sink.cpp  file_sink.h  zmq_sink.cpp  zmq_sink.h
src/mining/: assembler.cpp  assembler.h  candidates.cpp  candidates.h  factory.cpp  factory.h  journal.cpp  journal.h  journal_builder.cpp  journal_builder.h  journal_change_set.cpp  journal_change_set.h  journal_entry.cpp  journal_entry.h  journaling_block_assembler.cpp  journaling_block_assembler.h
src/net/: association.cpp  association.h  association_id.cpp  association_id.h  block_download_tracker.cpp  block_download_tracker.h  net.cpp  net.h  net_message.cpp  net_message.h  net_processing.cpp  net_processing.h  net_types.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  node_state.cpp  node_state.h  node_stats.h  send_queue_bytes.h  stream.cpp  stream.h  stream_policy.cpp  stream_policy.h  stream_policy_factory.cpp  stream_policy_factory.h  validation_scheduler.cpp  validation_scheduler.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  client_config.cpp  client_config.h  client_utils.cpp  client_utils.h  http_protocol.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  jsonwriter.cpp  jsonwriter.h  mining-fbb.cpp  mining.cpp  mining.h  misc.cpp  misc.h  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safe_mode.cpp  server.cpp  server.h  text_writer.h  tojson.h  webhook_client.cpp  (+2 more)
(+249 files in other folders)
